<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent">
     <PreferenceCategory
         android:title="weather data settings">
        <EditTextPreference
            android:key="@string/pref_location_key"
            android:title="@string/pref_location_title"
            android:defaultValue="@string/pref_location_city_default"
            android:summary="@string/pref_location_summary"
            android:inputType="text"
            android:singleLine="true"
            />

         <com.afollestad.materialdialogs.prefs.MaterialListPreference
             android:defaultValue="@string/pref_units_default"
             android:key="@string/pref_units_key"
             android:title="@string/prefs_units_title"
             android:summary="@string/pref_units_summary"
             android:entries="@array/pref_units_options"
             android:entryValues="@array/pref_units_values"
             android:dialogTitle="@string/pref_choose_dialog_units_title"/>

     </PreferenceCategory>
</PreferenceScreen>